--- a/index.html
+++ b/index.html
@@ -1,1 +1,38 @@
-Hello
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+</head>
+
+<body>
+    <header class="header">
+        <h3>Daniel Mikuła</h3>
+    </header>
+
+    <section class="intro">
+        <h1>Front-end developer based in Gdansk</h1>
+    </section>
+
+    <div class="">
+        <section class="contact">
+            <h5 class="caption">contact</h5>
+            <h3 class="info">daniel.mikula11@gmail.com</h3>
+            <h3 class="info">506627327</h3>
+        </section>
+        <section class="links">
+            <h5 class="caption">Links</h5>
+            <h3 class="info">GitHub</h3>
+            <h3 class="info">LinkedIn</h3>
+        </section>
+    </div>
+
+
+</body>
+
+</html>
+<!--https://patrickdavid.com/?ref=lapaninja
+https://ahmdyassr.com/?ref=lapaninja-->
