style css added

--- a/index.html
+++ b/index.html
@@ -6,28 +6,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Playfair+Display:400,400i" rel="stylesheet">
 </head>
 
 <body>
-    <header class="header">
-        <h3>Daniel Mikuła</h3>
-    </header>
+    <div class="wrapper">
+        <header class="header">
+            <h2>Daniel Mikuła</h3>
+        </header>
 
-    <section class="intro">
-        <h1>Front-end developer based in Gdansk</h1>
-    </section>
+        <div class="intro">
+            <div class="photo">
+                <img src="DM.jpg" width="100px" height="auto">
+            </div>
+            <section class="text-intro">
+                <h1><i> Front-end developer based in Gdansk</i></h1>
+            </section>
+        </div>
 
-    <div class="">
-        <section class="contact">
-            <h5 class="caption">contact</h5>
-            <h3 class="info">daniel.mikula11@gmail.com</h3>
-            <h3 class="info">506627327</h3>
-        </section>
-        <section class="links">
-            <h5 class="caption">Links</h5>
-            <h3 class="info">GitHub</h3>
-            <h3 class="info">LinkedIn</h3>
-        </section>
+        <div class="">
+            <section class="contact">
+                <h5 class="caption">Contact</h5>
+                <h3 class="info">daniel.mikula11@gmail.com</h3>
+                <h3 class="info">506627327</h3>
+            </section>
+            <section class="links">
+                <h5 class="caption">Links</h5>
+                <h3 class="info">GitHub</h3>
+                <h3 class="info">LinkedIn</h3>
+            </section>
+        </div>
     </div>
 
 
@@ -35,4 +44,5 @@
 
 </html>
 <!--https://patrickdavid.com/?ref=lapaninja
-https://ahmdyassr.com/?ref=lapaninja-->
+https://ahmdyassr.com/?ref=lapaninja
+https://www.koysor.me/?ref=lapaninja-->
