--- a/index.html
+++ b/index.html
@@ -25,11 +25,29 @@
             </section>
         </div>
 
+        <div class="container">
+            <section class="skills">
+                <h3>Skills</h3>
+                <ul>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>GIT</li> 
+                </ul>
+            </section>
+
+            <section class="goals">
+                <h3>Goals</h3>
+                <ul>
+                    <li>ReactJS</li>
+                </ul>
+            </section>
+        </div>
+
         <div class="">
             <section class="contact">
                 <h5 class="caption">Contact</h5>
-                <h3 class="info">daniel.mikula11@gmail.com</h3>
-                <h3 class="info">506627327</h3>
+                <h3 class="info"><img src="mail.png">daniel.mikula11@gmail.com</h3>
+                <h3 class="info"><img src="phone.png">+48506627327</h3>
             </section>
             <section class="links">
                 <h5 class="caption">Links</h5>
