--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <ul>
                     <li>HTML</li>
                     <li>CSS</li>
-                    <li>GIT</li> 
+                    <li>GIT</li>
                 </ul>
             </section>
 
@@ -43,17 +43,18 @@
             </section>
         </div>
 
-        <div class="">
-            <section class="contact">
-                <h5 class="caption">Contact</h5>
-                <h3 class="info"><img src="mail.png">daniel.mikula11@gmail.com</h3>
-                <h3 class="info"><img src="phone.png">+48506627327</h3>
-            </section>
+        <div class="bottom">
             <section class="links">
                 <h5 class="caption">Links</h5>
                 <h3 class="info">GitHub</h3>
                 <h3 class="info">LinkedIn</h3>
             </section>
+            <section class="contact">
+                <h5 class="caption">Contact</h5>
+                <h3 class="info"><img src="mail.png">daniel.mikula11@gmail.com</h3>
+                <h3 class="info"><img src="phone.png">+48506627327</h3>
+            </section>
+
         </div>
     </div>
 
