--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
         <div class="bottom">
             <section class="links">
                 <h5 class="caption">Links</h5>
-                <h3 class="info">GitHub</h3>
-                <h3 class="info">LinkedIn</h3>
+                <h3 class="info"><a href="https://github.com/daniel-mikula">GitHub</a></h3>
+                <h3 class="info"><a href="https://www.linkedin.com/in/danielmikula/">LinkedIn</a></h3>
             </section>
             <section class="contact">
                 <h5 class="caption">Contact</h5>
