--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <div class="wrapper">
         <header class="header">
             <h2>Daniel Mikuła</h3>
-        </header>
+                <p>Comming soon</p>
+<!--        </header>
 
         <div class="intro">
             <div class="photo">
@@ -61,7 +62,7 @@
 
 </body>
 
-</html>
+</html>-->
 <!--https://patrickdavid.com/?ref=lapaninja
 https://ahmdyassr.com/?ref=lapaninja
 https://www.koysor.me/?ref=lapaninja-->
